--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -6,5 +6,6 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-    --font-montserrat: Montserrat
+    --font-montserrat: Montserrat;
+    --shadow-lg: .2rem -.2rem 0.4rem rgb(0 0 0 / 0.1), -.2rem .2rem 0.4rem rgb(0 0 0 / 0.1), -.2rem -.2rem 0.4rem rgb(0 0 0 / 0.1), .2rem .2rem 0.4rem rgb(0 0 0 / 0.1);
 }
