--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-@import "tailwindcss;
+@import "tailwindcss";
 
-@plugin "flowbite/plugin";
-@source "../node_modules/flowbite";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
