--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -22,3 +22,7 @@
 .link-inactive-secondary {
     @apply hover:text-blue-500 dark:hover:text-violet-600 transition ease-in hover:ease-out duration-200;
 }
+
+.tile {
+    @apply px-3 py-4 w-full rounded-xl shadow-md dark:shadow-lg bg-white dark:bg-[#171131ef];
+}
