--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,25 +1,39 @@
 @import "tailwindcss";
 
-
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-    --font-montserrat: Montserrat;
+  --font-montserrat: Montserrat;
+}
+
+.btn-active {
+  @apply border-none dark:border-violet-500/50 border-1 bg-gradient-to-r from-blue-400 to-blue-500 dark:from-violet-600 dark:to-violet-500 text-white;
 }
 
 .link-active {
-    @apply border-none dark:border-violet-500/50 border-1 bg-gradient-to-r from-blue-400 to-blue-500 dark:from-violet-600 dark:to-violet-500 text-white shadow-md shadow-blue-300/50 dark:shadow-violet-500/50;
+  @apply border-none dark:border-violet-500/50 border-1 bg-gradient-to-r from-blue-400 to-blue-500 dark:from-violet-600 dark:to-violet-500 text-white shadow-md shadow-blue-300/50 dark:shadow-violet-500/50;
 }
 
 .link-inactive-primary {
-    @apply hover:dark:bg-violet-500 hover:bg-blue-300 hover:text-white transition duration-200 ease-in;
+  @apply hover:dark:bg-violet-500 hover:bg-blue-300 hover:text-white transition duration-200 ease-in;
 }
 
-
 .link-inactive-secondary {
-    @apply hover:text-blue-500 dark:hover:text-violet-600 transition ease-in hover:ease-out duration-200;
+  @apply hover:text-blue-500 dark:hover:text-violet-600 transition ease-in hover:ease-out duration-200;
 }
 
 .tile {
-    @apply px-3 py-4 w-full rounded-xl shadow-md dark:shadow-lg bg-white dark:bg-[#171131ef];
+  @apply px-3 py-4 w-full rounded-xl shadow-md dark:shadow-lg bg-white dark:bg-[#171131ef];
+}
+
+.is-invalid {
+  @apply border-red-500 dark:border-red-500/50 ring-red-500/50 dark:ring-red-500;
+}
+
+.info-label {
+  @apply text-sm m-2 select-none;
+}
+
+.info-content {
+  @apply bg-gray-200 py-2 px-3 rounded-md border border-gray-300 dark:bg-[#231f39] dark:border-gray-700;
 }
