--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,21 +1,25 @@
 /* W3C standard
    сейчас только для Firefox */
 * {
-    scrollbar-width: thin;
-    scrollbar-color: #9e9e9eef transparent;
+  scrollbar-width: thin;
+  scrollbar-color: #9e9e9eef transparent;
 }
 
 /* для Chrome/Edge/Safari */
 *::-webkit-scrollbar {
-    height: 12px;
-    width: 12px;
+  height: 12px;
+  width: 12px;
 }
 *::-webkit-scrollbar-track {
-    background: orange;
+  background: orange;
 }
 *::-webkit-scrollbar-thumb {
-    background-color: transparent;
-    border-radius: 5px;
-    border: none;
+  background-color: transparent;
+  border-radius: 5px;
+  border: none;
 }
 
+table thead tr.lr th {
+  writing-mode: vertical-rl !important;
+  transform: rotate(180deg);
+}
