--- a/main/templates/main/dev_tools.html
+++ b/main/templates/main/dev_tools.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="{% url 'download_log_file' %}">Скачать логи</a>
+    <a href="{% url 'clear_log_file' %}">Очистить логи</a>
 </body>
 </html>
