--- a/main/templates/main/dev_tools.html
+++ b/main/templates/main/dev_tools.html
@@ -9,5 +9,6 @@
     <a href="{% url 'download_log_file' %}">Скачать логи</a>
     <a href="{% url 'clear_log_file' %}">Очистить логи</a>
     <a href="{% url 'get_json_dump' %}">Взять дамп(JSON)</a>
+    <a href="{% url 'get_sql_dump' %}">Взять дамп(PSQL)</a>
 </body>
 </html>
